[BISERVER-6054] Scrollbars no longer auto-refreshing for performance reasons. Manually refreshing scrollbars where needed

--- a/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
+++ b/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
@@ -282,3 +282,18 @@ legend {
 .xul-editPanel-content{
 
 }
+
+.tree-scroll-panel{
+  position:relative;
+  overflow:auto;
+  height:100%;
+  width:100%;
+}
+
+.label-scroll-panel{
+  position:relative;
+  overflow:auto;
+  height:100%;
+  width:100%;
+}
+
